Fix broken layout for dashboard and store

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -9,3 +9,7 @@ input[type=number] {
   -moz-appearance: textfield;
   text-align: right;
 }
+
+body {
+  background-color: #F5F5F5
+}
